--- a/index.html
+++ b/index.html
@@ -340,10 +340,6 @@
     </style>
 </head>
 <body>
-    <div id="notification">
-    Разыгрываем ваучеры!
-    <button class="notification-button" onclick="window.location.href='https://t.me/negociokazik';">Перейти</button>
-    </div>
     <div class="container">
         <img src="1.png" alt="Череп 1" id="skull1">
         <img src="1.png" alt="Череп 2" id="skull2">
@@ -352,7 +348,7 @@
     </div>
     <div class="button-container">
     <button class="start-button" onclick="openModal()">Начать</button>
-    <button class="return-button" onclick="location.href='https://nickyylable.github.io/lasthere/'">Вернуться</button>
+    <button class="return-button" onclick="location.href='https://tolianius.github.io/all-games.github.io/'">Вернуться</button>
     <div class="business-name">
        <img src="tg.svg" alt="Telegram Icon" style="vertical-align: middle; margin-right: 10px; width: 60px; height: 60px;">
         DEVILS
