--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     </div>
     <div class="button-container">
     <button class="start-button" onclick="openModal()">Начать</button>
-    <button class="return-button" onclick="location.href='https://nickyylable.github.io/lasthere/'">Главное Меню</button>
+    <button class="return-button" onclick="location.href='https://tolianius.github.io/all-games.github.io/'">Главное Меню</button>
 </div>
     <div id="modal">
         <div class="modal-content">
